fix: text-alignments of chat messages

--- a/web/styles/chat.scss
+++ b/web/styles/chat.scss
@@ -34,6 +34,9 @@
         width: 3rem;
         padding: 0.25rem;
       }
+      p {
+        margin-bottom: 0;
+      }
     }
   }
 
